# hough3d

./: .gitignore  README.md  Testing.ipynb  pyproject.toml
hough3d/: .spatial.py.swp  basic_hough.py  line_segment_hough.py  spatial.py  utils.py
hough3d/__pycache__/: basic_hough.hough3D-6.py311.1.nbc  basic_hough.hough3D-6.py311.2.nbc  basic_hough.hough3D-6.py311.nbi
notebooks/: Testing.ipynb
